# viralfetch

./: .gitignore  README.md  SPEC.md  pyproject.toml
data/: .~lock.VMR_MSL41.v1.20260320.csv#
tests/: .gitignore  conftest.py  test_accessions.py  test_cache.py  test_cli.py  test_compare.py  test_ictv.py  test_integration.py  test_msa.py  test_ncbi.py  test_queries.py  test_render_images.py  test_sequences.py  test_trees.py
tests/fixtures/: efetch_nuccore.fasta  efetch_nuccore.gb  elink_protein.json  esummary_nuccore.json  taxonomy.xml
tests/fixtures/chapters/: coronaviridae.html  filoviridae.html  geminiviridae.html  poxviridae.html  rhabdoviridae.html
viralfetch/: .gitignore  __init__.py  accessions.py  cache.py  cli.py  compare.py  config.py  ictv.py  models.py  msa.py  ncbi.py  queries.py  sequences.py  trees.py  vmr.py
viralfetch/ictv-trees/: _index.json
viralfetch/ictv-trees/adenoviridae/: chapter.md  provenance.json  resources.json
viralfetch/ictv-trees/alphaflexiviridae/: chapter.md  provenance.json  resources.json
viralfetch/ictv-trees/arenaviridae/: chapter.md  provenance.json  resources.json
viralfetch/ictv-trees/artoviridae/: chapter.md  provenance.json  resources.json
viralfetch/ictv-trees/ascoviridae/: chapter.md  provenance.json  resources.json
viralfetch/ictv-trees/asfarviridae/: chapter.md  provenance.json  resources.json
viralfetch/ictv-trees/aspiviridae/: chapter.md  provenance.json  resources.json
viralfetch/ictv-trees/avsunviroidae/: chapter.md  provenance.json  (+1 more)
viralfetch/render/: __init__.py  json_.py  rich_.py
(+636 files in other folders)
