[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viralfetch"
version = "0.1.0"
description = "Query and download viral taxonomy, metadata and sequences (ICTV VMR + NCBI E-utilities + ICTV Report)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "gabrielvpina" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "requests>=2.31",
    "platformdirs>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
viralfetch = "viralfetch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["viralfetch"]

[tool.hatch.build.targets.wheel.force-include]
"viralfetch/data" = "viralfetch/data"

[tool.pytest.ini_options]
markers = [
    "network: integration tests that hit the network (excluded by default)",
]
addopts = "-m 'not network'"
testpaths = ["tests"]
